--- a/app-administracion/administracion/appsettings.json
+++ b/app-administracion/administracion/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "cnDatabase": "Server=localhost;Database=Administracion;Port=5432;User Id=postgres;Password=123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
