--- a/app-levantamiento/levantamiento/levantamiento.csproj
+++ b/app-levantamiento/levantamiento/levantamiento.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="System.ServiceModel.Web" Version="1.0.0" />
   </ItemGroup>
 
+<ItemGroup>
+    <ProjectReference Include="..\levantamiento\levantamiento.csproj" />
+</ItemGroup>
+
 </Project>
