--- a/app-proveedor/proveedor.tests/proveedor.tests.csproj
+++ b/app-proveedor/proveedor.tests/proveedor.tests.csproj
@@ -21,4 +21,7 @@
     </PackageReference>
   </ItemGroup>
 
+<ItemGroup>
+    <ProjectReference Include="..\proveedor\proveedor.csproj" />
+</ItemGroup>
 </Project>
