implementado el registro de incidentes
Ahora se puede registrar, consultar y modificar, incidentes, vehiculos, polizas y asegurados

--- a/app-levantamiento/levantamiento.tests/levantamiento.tests.csproj
+++ b/app-levantamiento/levantamiento.tests/levantamiento.tests.csproj
@@ -20,5 +20,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
-
+  
+<ItemGroup>
+    <ProjectReference Include="..\levantamiento\levantamiento.csproj" />
+</ItemGroup>
 </Project>
