--- a/app-proveedor/proveedor/appsettings.json
+++ b/app-proveedor/proveedor/appsettings.json
@@ -1,4 +1,4 @@
-{ "DbConnectionString": "Server=localhost;Database=proveedor;Port=5432;User Id=postgres;Password=postgres",
+{ "DbConnectionString": "Server=localhost;Database=proveedor;Port=5432;User Id=postgres;Password=123456",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
