Agregados Test de integracion de la parte de Administracion

--- a/app-administracion/administracion/appsettings.json
+++ b/app-administracion/administracion/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "DataBaseConnection": "Server=localhost;Database=Administracion;Port=5432;User Id=postgres;Password=123456",
+    "DataBaseTestConnection": "Server=localhost;Database=AdministracionTest;Port=5432;User Id=postgres;Password=123456",
     "MQConnection": "amqp://guest:guest@localhost:5672"
   },
   "Logging": {
