--- a/app-levantamiento/levantamiento/appsettings.json
+++ b/app-levantamiento/levantamiento/appsettings.json
@@ -1,8 +1,9 @@
 {
   "ConnectionStrings": {
-    "cnDatabase": "Server=localhost;Database=Levantamiento;Port=5432;User Id=postgres;Password=123456",
+    "DataBaseConnection": "Server=localhost;Database=Levantamiento;Port=5432;User Id=postgres;Password=123456",
     "ApiAdmin":"https://localhost:7281/",
-    "ApiTaller":"https://localhost:7000/"
+    "ApiTaller":"https://localhost:7000/",
+    "MQConnection":"amqp://localhost:5672", 
   },
   "Logging": {
     "LogLevel": {
